tests/pass/11_structs.lang
структура Точка {
    целое х;
    целое у;
}

структура Игрок {
    Точка позиция;
    целое здоровье;
}

функция main() : целое {
    Игрок герой;
    
    // Обращение к полям
    герой.здоровье = 100;
    герой.позиция.х = 15;
    герой.позиция.у = 42;
    
    утверждение(герой.здоровье == 100);
    утверждение(герой.позиция.х == 15);
    утверждение(герой.позиция.у == 42);
    
    // Математика с полями
    целое сумма = герой.позиция.х + герой.позиция.у;
    утверждение(сумма == 57);
    
    печать "STRUCTS PROPASSED!";
    вернуть 0;
}
